sharding-jdbc-config-parent/sharding-jdbc-config-common/src/test/resources/error/table_strategy_error.groovy
package error

table "order21", ["t_order"], tableStrategy('1')